--- a/WebIntBigData.ipynb
+++ b/WebIntBigData.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9d7749c9c608ff9e3966eee1b62ef7927e861ad975bf9711411e2a6ee548cf3a"
+  "signature": "sha256:527a260c7f7ff452a8f728dbf5bbbcf6bf0efb8a3070d7304545e1ae77d2e1a1"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,6 +28,21 @@
       "\\end{equation*}\n",
       "\n",
       "\u5f53\u6570\u636e\u91cf\u5927\u7684\u65f6\u5019\uff0c\u6548\u7387\u63a5\u8fd1\u4e8e1\u3002"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Introduction on Graph Data\n",
+      "\n",
+      "* \u5173\u4e8egraph database \u548c google knowledge graph\n",
+      "\n",
+      "graph database \u7684\u95ee\u9898\u5728\u4e8e\u600e\u4e48\u7ec4\u7ec7\u6570\u636e\uff1f\u600e\u4e48\u67e5\u8be2\u6570\u636e\uff1f\n",
+      "\n",
+      "google knowledge graph\u7684\u95ee\u9898\u5728\u4e8e\u4e0d\u80fd\u5904\u7406\u52a8\u6001\u60c5\u5f62\uff0c\u5982\u65f6\u95f4\u5e8f\u5217\u6570\u636e\n",
+      "\n",
+      "* graph database \u7684\u67e5\u8be2\u8bed\u8a00\uff1agremlin\uff0cSPARQL"
      ]
     },
     {
